--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "dalle-node",
-  "version": "1.0.0",
-  "description": "",
+  "version": "1.0.1",
+  "description": "Use DallE with Nodejs",
   "main": "dalle-node.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
